--- a/menu.html
+++ b/menu.html
@@ -130,7 +130,7 @@
         <i class="bi bi-bar-chart"></i><span>Estadísticas</span>
       </button>
       <button onclick="window.location.href='agregar_mecanicos.html'">
-        <i class="bi bi-person-plus"></i><span>Agregar Mecánicos</span>
+        <i class="bi bi-person-plus"></i><span>Agregar Personal</span>
       </button>
       <button onclick="window.location.href='documentacion.html'">
         <i class="bi bi-journal-text"></i><span>Documentación</span>
@@ -144,4 +144,5 @@
     </div>
   </div>
 </body>
+
 </html>
