--- a/menu.html
+++ b/menu.html
@@ -138,11 +138,14 @@
       <button onclick="window.location.href='control_pinchazos.html'">
         <i class="bi bi-exclamation-circle"></i><span>Pinchazos y Cambio de Rueda</span>
       </button>
+      <!-- Nuevo botón para inventario -->
+      <button onclick="window.location.href='inventario/menu.html'">
+        <i class="bi bi-boxes"></i><span>Inventario</span>
+      </button>
       <button onclick="window.location.href='index.html'">
         <i class="bi bi-box-arrow-left"></i><span>Salir</span>
       </button>
     </div>
   </div>
 </body>
-
 </html>
