--- a/menu.html
+++ b/menu.html
@@ -139,7 +139,7 @@
         <i class="bi bi-exclamation-circle"></i><span>Pinchazos y Cambio de Rueda</span>
       </button>
       <!-- Nuevo botón para inventario -->
-      <button onclick="window.location.href='inventario/menu.html'">
+      <button onclick="window.location.href='menu_inventario.html'">
         <i class="bi bi-boxes"></i><span>Inventario</span>
       </button>
       <button onclick="window.location.href='index.html'">
