--- a/menu_inventario.html
+++ b/menu_inventario.html
@@ -225,7 +225,7 @@
     </div>
 
     <div class="logout-container">
-      <a href="../menu.html" class="btn btn-secondary">
+      <a href="../TransportesHereme/menu.html" class="btn btn-secondary">
         <i class="fas fa-arrow-left"></i> Volver al Menú Principal
       </a>
     </div>
@@ -281,4 +281,5 @@
     </div>
   </div>
 </body>
+
 </html>
