--- a/menu.html
+++ b/menu.html
@@ -135,8 +135,8 @@
       <button onclick="window.location.href='documentacion.html'">
         <i class="bi bi-journal-text"></i><span>Documentación</span>
       </button>
-      <button onclick="window.location.href='control_pinchazos.html'">
-        <i class="bi bi-exclamation-circle"></i><span>Pinchazos y Cambio de Rueda</span>
+      <button onclick="window.location.href='crear_pauta.html'">
+        <i class="bi bi-exclamation-circle"></i><span>Pauta Preventiva de Sistemas Criticos</span>
       </button>
       <!-- Nuevo botón para inventario -->
       <button onclick="window.location.href='menu_inventario.html'">
