--- a/menu.html
+++ b/menu.html
@@ -135,7 +135,7 @@
       <button onclick="window.location.href='documentacion.html'">
         <i class="bi bi-journal-text"></i><span>Documentación</span>
       </button>
-      <button onclick="window.location.href='crear_pauta.html'">
+      <button onclick="window.location.href='listado_pauta.html'">
         <i class="bi bi-exclamation-circle"></i><span>Pauta Preventiva de Sistemas Criticos</span>
       </button>
       <!-- Nuevo botón para inventario -->
