--- a/menu.html
+++ b/menu.html
@@ -142,6 +142,10 @@
       <button onclick="window.location.href='menu_inventario.html'">
         <i class="bi bi-boxes"></i><span>Inventario</span>
       </button>
+      <!-- Nuevo botón para Emitir Certificado -->
+      <button onclick="window.location.href='emitir_certificado.html'">
+        <i class="bi bi-file-earmark-check"></i><span>Emitir Certificado</span>
+      </button>
       <button onclick="window.location.href='index.html'">
         <i class="bi bi-box-arrow-left"></i><span>Salir</span>
       </button>
